fix flex overflow bug

--- a/pages/tournament/create/index.module.sass
+++ b/pages/tournament/create/index.module.sass
@@ -210,6 +210,7 @@
         padding-top: 5px
     .formContent
       flex: 1
+      min-width: 0
     :global(.ant-radio-wrapper)
       align-items: center
       margin-bottom: 20px
